[package]
name = "trustformers-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for TrustformeRS transformer library"
categories = ["api-bindings", "science"]
keywords = ["transformers", "python", "machine-learning", "nlp", "pyo3"]

[lib]
name = "trustformers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38"] }
numpy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
lazy_static.workspace = true
approx.workspace = true
libc = "0.2"

# SciRS2 Integration Policy: Use scirs2-core abstractions instead of direct dependencies
# Python compatibility handled by scirs2-core python feature
# NOTE: linalg feature disabled - ndarray-linalg requires ndarray 0.17, incompatible with python/numpy
scirs2-core = { path = "../../scirs/scirs2-core", default-features = false, features = ["python", "random", "parallel", "array", "serialization"] }

# TrustformeRS dependencies
# Python compatibility is handled by scirs2-core's python feature
trustformers-core = { workspace = true, default-features = false }
trustformers-models = { workspace = true, default-features = false, features = ["bert", "gpt2", "t5", "llama"] }
trustformers-tokenizers = { workspace = true, default-features = false }
trustformers-optim = { workspace = true, default-features = false }
trustformers-training = { workspace = true, default-features = false }
trustformers = { workspace = true, default-features = false, features = ["all-models"] }

[build-dependencies]
pyo3-build-config = "0.27.2"

[features]
default = ["pyo3/auto-initialize", "python-gc"]
python-gc = []  # Enable Python garbage collection integration
cuda = ["trustformers-core/cuda"]  # CUDA support (propagated from trustformers-core)
