[package]
name = "trustformers-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance inference server for TrustformeRS models"
homepage = "https://github.com/cool-japan/trustformers"
repository.workspace = true
keywords = ["inference", "server", "batching", "llm", "optimization"]
categories = ["web-programming", "science"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry-jaeger = "0.20"
opentelemetry-zipkin = "0.19"
opentelemetry-semantic-conventions = "0.13"
parking_lot.workspace = true
ordered-float.workspace = true
prometheus.workspace = true
prost.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.22"
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
clap.workspace = true
env_logger.workspace = true
tokio-rustls.workspace = true
rustls = { version = "0.21", features = ["dangerous_configuration"] }
base64.workspace = true
mime_guess.workspace = true
fastrand.workspace = true
toml.workspace = true
semver.workspace = true
sha2.workspace = true
sysinfo = "0.34.2"
libc.workspace = true
bincode = "1.3"
rmp-serde = "1.3"
flate2.workspace = true
lz4.workspace = true

# Message Queue Dependencies
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl", "zstd"] }
lapin = "2.5"
redis = { version = "0.32", features = ["tokio-comp", "streams"] }
async-nats = "0.36"
aws-sdk-sqs = "1.42"
aws-config = "1.5"

# Cloud Provider Dependencies
aws-sdk-sagemaker = "1.42"
aws-sdk-sagemakerruntime = "1.42"
aws-sdk-lambda = "1.42"
aws-sdk-cloudwatch = "1.42"
lambda-web = "0.2.1"
lambda_runtime = "0.14.2"
google-cloud-gax = "0.23.1"
google-cloud-functions-v2 = "0.4.1"
azure_core = "0.20"
azure_identity = "0.20"
azure_mgmt_machinelearningservices = "0.20"
azure_mgmt_web = "0.20"

# Internal dependencies
trustformers-core.workspace = true
trustformers-mobile.workspace = true
scirs2-core.workspace = true

[dev-dependencies]
axum-test.workspace = true
criterion.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
futures.workspace = true
chrono.workspace = true
proptest.workspace = true
approx.workspace = true
paste.workspace = true

[build-dependencies]
tonic-build.workspace = true