[package]
name = "trustformers-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance inference server for TrustformeRS models"
homepage = "https://github.com/cool-japan/trustformers"
repository.workspace = true
keywords = ["inference", "server", "batching", "llm", "optimization"]
categories = ["web-programming", "science"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-jaeger = "0.22"
opentelemetry-zipkin = "0.31"
opentelemetry-semantic-conventions = "0.31"
parking_lot.workspace = true
ordered-float.workspace = true
prometheus.workspace = true
prost.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.32"
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
clap.workspace = true
env_logger.workspace = true
tokio-rustls.workspace = true
rustls = "0.23"
base64.workspace = true
mime_guess.workspace = true
fastrand.workspace = true
toml.workspace = true
semver.workspace = true
sha2.workspace = true
sysinfo = "0.37.2"
libc.workspace = true
bincode = "2.0"
rmp-serde = "1.3"
flate2.workspace = true
lz4.workspace = true

# Message Queue Dependencies
rdkafka = { version = "0.38", features = ["cmake-build", "ssl", "sasl", "zstd"] }
lapin = "3.7"
redis = { version = "0.32", features = ["tokio-comp", "streams"] }
async-nats = "0.45"
aws-sdk-sqs = "1.89"
aws-config = "1.8"

# Cloud Provider Dependencies
aws-sdk-sagemaker = "1.166"
aws-sdk-sagemakerruntime = "1.91"
aws-sdk-lambda = "1.104"
aws-sdk-cloudwatch = "1.97"
lambda-web = "0.2.1"
lambda_runtime = "0.14.4"
google-cloud-gax = "1.2.0"
google-cloud-functions-v2 = "1.1.0"
azure_core = "0.30"
azure_identity = "0.29"
azure_mgmt_machinelearningservices = "0.21"
azure_mgmt_web = "0.21"

# Internal dependencies
trustformers-core.workspace = true
trustformers-mobile.workspace = true
scirs2-core = { workspace = true }

[dev-dependencies]
axum-test.workspace = true
criterion.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
futures.workspace = true
chrono.workspace = true
proptest.workspace = true
approx.workspace = true
paste.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
