[package]
name = "trustformers-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance inference server for TrustformeRS models"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/trustformers-serve"
keywords = ["inference", "server", "batching", "llm", "optimization"]
categories = ["web-programming", "science"]
readme = "README.md"

[lints]
workspace = true

[features]
default = []
# Enable Kafka message queue backend (requires cmake, C-based librdkafka)
kafka = ["dep:rdkafka"]

[dependencies]
anyhow.workspace = true
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
log.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-jaeger = "0.22"
opentelemetry-zipkin = "0.31"
opentelemetry-semantic-conventions = "0.31"
parking_lot.workspace = true
ordered-float.workspace = true
prometheus.workspace = true
prost.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.32"
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
clap.workspace = true
env_logger.workspace = true
tokio-rustls.workspace = true
rustls = "0.23"
base64.workspace = true
mime_guess.workspace = true
fastrand.workspace = true
toml.workspace = true
semver.workspace = true
sha2.workspace = true
glob = "0.3"
sysinfo = "0.38.4"
libc.workspace = true
oxicode.workspace = true
rmp-serde = "1.3"
oxiarc-deflate.workspace = true
oxiarc-lz4.workspace = true
oxiarc-zstd.workspace = true

# Message Queue Dependencies
# rdkafka is optional and requires the "kafka" feature; cmake-build pulls in C/C++ deps.
# The "zstd" feature is dropped: use oxiarc-zstd at the application layer instead.
rdkafka = { version = "0.39", features = ["cmake-build", "ssl", "sasl"], optional = true }
lapin = "4.5"
redis = { version = "1.2", features = ["tokio-comp", "streams"] }
async-nats = "0.46"
aws-sdk-sqs = "1.98"
aws-config = "1.8"

# Cloud Provider Dependencies
aws-sdk-sagemaker = "1.196"
aws-sdk-sagemakerruntime = "1.101"
aws-sdk-lambda = "1.122"
aws-sdk-cloudwatch = "1.110"
lambda-web = "0.2.1"
lambda_runtime = "1.1.3"
google-cloud-gax = "1.9.1"
google-cloud-functions-v2 = "1.9.0"
azure_core = "0.33"
azure_identity = "0.33"
azure_mgmt_machinelearningservices = "0.21"
azure_mgmt_web = "0.21"

# Internal dependencies
trustformers-core.workspace = true
trustformers-mobile.workspace = true
scirs2-core = { workspace = true }

[dev-dependencies]
axum-test.workspace = true
criterion.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
futures.workspace = true
chrono.workspace = true
proptest.workspace = true
approx.workspace = true
paste.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true
