[package]
name = "trustformers-grpc-server"
version.workspace = true
edition.workspace = true

[dependencies]
# gRPC framework
tonic = { version = "0.12", features = ["transport", "gzip", "tls"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# TrustformeRS
trustformers = { path = "../../trustformers", features = ["all-models"] }
trustformers-core = { path = "../../trustformers-core" }
trustformers-models = { path = "../../trustformers-models" }
trustformers-tokenizers = { path = "../../trustformers-tokenizers" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.9"
futures-util = "0.3"

# Health check
tonic-health = "0.12"
tonic-reflection = "0.12"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[[bin]]
name = "trustformers-grpc-server"
path = "src/main.rs"