[package]
name = "trustformers-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# TrustformeRS
trustformers = { path = "../../trustformers", features = ["all-models"] }
trustformers-core = { path = "../../trustformers-core" }
trustformers-models = { path = "../../trustformers-models" }
trustformers-tokenizers = { path = "../../trustformers-tokenizers" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.0"
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "trustformers-server"
path = "src/main.rs"