[package]
name = "trustformers-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust client library for TrustformeRS serving infrastructure"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/trustformers-client"
readme = "README.md"
keywords = ["machine-learning", "transformers", "ai", "client", "trustformers"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# URL manipulation
url = "2.5"

# Authentication
oauth2 = { version = "4.4", optional = true }
base64 = "0.22"

# Async traits
async-trait = "0.1"

# TLS
rustls = "0.23"

# Futures utilities
futures = "0.3"
futures-util = "0.3"

# UUID for request IDs
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
env_logger = "0.11"

[features]
default = ["oauth2"]
oauth2 = ["dep:oauth2"]

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[example]]
name = "streaming_client"
path = "examples/streaming_client.rs"

[[example]]
name = "batch_client"
path = "examples/batch_client.rs"